[metadata]
name = lcdata
version = 0.1
author = Kyle Boone
author_email = kyboone@uw.edu
description = lcdata: Tools for manipulating large datasets of astronomical light curves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kboone/lcdata
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    astropy
    h5py
    numpy
    tables
    pyyaml
