[metadata]
name = lcdata
version = 0.1
author = Kyle Boone
author_email = kyboone@uw.edu
description = lcdata: Tools for manipulating large datasets of astronomical light curves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kboone/lcdata
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    astropy
    h5py
    numpy
    tables
    pyyaml
scripts =
    scripts/lcdata_download_plasticc
    scripts/lcdata_download_ps1

[options.extras_require]
test = # Required to run the test suite.
    pytest
test_coverage = # Required for coverage tests.
    coverage
    pytest-cov
docs = # Required to build the docs.
    numpy
    sphinx
    sphinx_rtd_theme
    pillow
    numpydoc

[coverage:run]
source = lcdata
omit =
    lcdata/tests/*
    lcdata/__init__.py

[coverage:report]
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover

   # Don't complain about packages we have installed
   except ImportError

   # Don't complain if tests don't hit assertions
   raise AssertionError
   raise NotImplementedError

   # Don't complain about script hooks
   def main\(.*\):

   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
